--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "at-page-de-hoteis": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
